
SUBDIRS=list

noinst_LTLIBRARIES=libwidgets.la

libwidgets_la_SOURCES=widget.cpp frame.cpp button.cpp label.cpp scroller.cpp scrollbar.cpp iconbutton.cpp tabs.cpp resizeableframe.cpp textinput.cpp grid.cpp combobox.cpp terminal.cpp tab.cpp numberinput.cpp
libwidgets_la_CPPFLAGS=-I${top_srcdir}/include
libwidgets_la_LIBADD=list/liblist.la

